--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "mkdirp": "^0.5.1",
     "next": "7.0.2",
     "next-manifest": "^1.6.0",
-    "next-offline": "^3.0.4",
+    "next-offline": "git@github.com:shawninder/next-offline.git",
     "react": "16.6.1",
     "react-dom": "16.6.1",
     "rimraf": "^2.6.2"
